--- a/RecycleProject/Storyboards/Map.storyboard
+++ b/RecycleProject/Storyboards/Map.storyboard
@@ -51,8 +51,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQb-vX-xCP">
                                 <rect key="frame" x="13" y="187.66666666666669" width="349" height="590.33333333333326"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="2Y1-Zg-vyB">
-                                        <rect key="frame" x="0.0" y="20" width="349" height="398.33333333333331"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="2Y1-Zg-vyB">
+                                        <rect key="frame" x="0.0" y="20" width="349" height="458.33333333333331"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Bw-Na-uJb">
                                                 <rect key="frame" x="0.0" y="0.0" width="349" height="50"/>
@@ -78,10 +78,10 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dPb-k7-lYc">
-                                                <rect key="frame" x="0.0" y="75.000000000000028" width="349" height="50"/>
+                                                <rect key="frame" x="0.0" y="85.000000000000028" width="349" height="50"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SpF-Bw-zeq">
-                                                        <rect key="frame" x="0.0" y="0.0" width="227" height="50"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="197.66666666666666" height="50"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vIo-Hy-c59">
                                                             <size key="itemSize" width="60" height="60"/>
@@ -92,7 +92,7 @@
                                                         <cells/>
                                                     </collectionView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vdh-tE-72b">
-                                                        <rect key="frame" x="247" y="0.0" width="102" height="26.666666666666668"/>
+                                                        <rect key="frame" x="217.66666666666663" y="0.0" width="131.33333333333337" height="35"/>
                                                         <color key="backgroundColor" name="GoodRecycleStatusColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="35" id="Qkw-7A-Y3U"/>
@@ -112,13 +112,13 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Какая-то информация" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7H0-Vs-EiG">
-                                                <rect key="frame" x="0.0" y="150.00000000000003" width="349" height="20"/>
+                                                <rect key="frame" x="0.0" y="170.00000000000003" width="349" height="20"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="GfM-fG-Tf4">
-                                                <rect key="frame" x="0.0" y="195.00000000000003" width="349" height="42.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="225.00000000000003" width="349" height="42.666666666666657"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Часы работы" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oz-Ga-Du5">
                                                         <rect key="frame" x="0.0" y="0.0" width="349" height="17.666666666666668"/>
@@ -135,7 +135,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="7uw-29-Kjg">
-                                                <rect key="frame" x="0.0" y="262.66666666666663" width="349" height="42.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="302.66666666666663" width="349" height="42.666666666666686"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZA-L9-cFd">
                                                         <rect key="frame" x="0.0" y="0.0" width="349" height="17.666666666666668"/>
@@ -151,17 +151,26 @@
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="o6S-OQ-E7Z">
-                                                <rect key="frame" x="0.0" y="330.33333333333337" width="349" height="24.333333333333314"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="o6S-OQ-E7Z">
+                                                <rect key="frame" x="0.0" y="380.33333333333337" width="349" height="24.333333333333314"/>
                                                 <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wGr-lu-3Nf">
+                                                        <rect key="frame" x="0.0" y="0.0" width="312" height="24.333333333333332"/>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                        <state key="normal" title="Сообщить о несоответствии"/>
+                                                        <connections>
+                                                            <action selector="problemReportLabelButtonTapped:" destination="19n-dc-hUl" eventType="touchUpInside" id="dBb-e7-yVG"/>
+                                                        </connections>
+                                                    </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сообщить о несоответствии" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Wd3-0y-0Et">
-                                                        <rect key="frame" x="0.0" y="0.0" width="228.33333333333334" height="24.333333333333332"/>
+                                                        <rect key="frame" x="219" y="0.0" width="88" height="24.333333333333332"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                         <color key="textColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6eR-QJ-c5h">
-                                                        <rect key="frame" x="243.33333333333329" y="0.0" width="105.66666666666666" height="24.333333333333332"/>
+                                                        <rect key="frame" x="312" y="0.0" width="37" height="24.333333333333332"/>
                                                         <state key="normal" image="exclamationmark.octagon.fill" catalog="system">
                                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" scale="default"/>
                                                         </state>
@@ -173,9 +182,14 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="24.333333333333314" id="6Ms-C8-ZDT"/>
                                                 </constraints>
+                                                <variation key="default">
+                                                    <mask key="subviews">
+                                                        <exclude reference="Wd3-0y-0Et"/>
+                                                    </mask>
+                                                </variation>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="E0c-Dn-m5a">
-                                                <rect key="frame" x="0.0" y="379.66666666666674" width="349" height="18.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="439.66666666666674" width="349" height="18.666666666666686"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дата обновления информации" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXU-Pp-fd1">
                                                         <rect key="frame" x="0.0" y="0.0" width="254" height="18.666666666666668"/>
